force-app/main/default/objects/NF_Figmalwc_Settings__c/fields/Claude_Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Claude_Api_Key__c</fullName>
    <description>Anthropic Claude API key (console.anthropic.com)</description>
    <label>Claude API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>