force-app/main/default/objects/NF_Figmalwc_Settings__c/fields/Figma_Token__c.field-meta.xml
<CustomField>
    <fullName>Figma_Token__c</fullName>
    <description>Figma personal access token (Settings → Account → Personal access tokens)</description>
    <label>Figma Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>