force-app/main/default/objects/NF_Figmalwc_Settings__c/fields/OpenAI_Api_Key__c.field-meta.xml
<CustomField>
    <fullName>OpenAI_Api_Key__c</fullName>
    <description>OpenAI API key (platform.openai.com). If set, GPT-4o is used instead of Claude.</description>
    <label>OpenAI API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>